--- a/styles/style.css
+++ b/styles/style.css
@@ -78,14 +78,116 @@
   z-index: 0;
 }
 
+.description {
+  background-color: white;
+  display: flex;
+}
 
+.two-columns {
+  display: flex;
+  justify-content: space-between;
+  margin: 100px auto 0 100px;
+  width: 80%;
+}
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.two-columns__brief {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+  width: 175px;
+  margin: 0;
+}
 
-/* и элемента с модификатором вида ключ-значение */
+.two-columns__main-text {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  width: 80%;
+  min-width: 784px ;
+}
+
+.two-columns__paragraph {
+  margin: 0 0 30px 0;
+}
+
+.two-columns__paragraph:last-of-type {
+  margin: 0;
+}
+
+.two-columns__span-accent {
+  font-weight: 600;
+}
+
+.digits {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+}
+
+.section-title {
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  text-align: center;
+  width: 60%;
+}
+
+.section-title_margin_100 {
+  margin: 100px auto 0 auto;
+}
+
+.section-subtitle {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+  width: 60%;
+}
+
+.section-subtitle_margin_20 {
+  margin:20px auto 0 auto;
+}
+
+.table {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.table_theme_white {
+  margin: 0 auto 100px auto;
+  width: 1100px;
+}
+
+.table__cell_theme_white {
+  margin-top: 60px;
+  width: 250px;
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.table__heading_theme_white {
+
+}
+
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.table__text_theme_white {
+  margin-top: 20px;
 }
