--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,7 @@
   display: flex;
   /* выше установили ограничения для секции */
   position: relative;
+  align-items: center;
 
 }
 
@@ -34,7 +35,7 @@
 }
 
 .header__title {
-  margin: auto 0 auto 64px;
+  margin: 0 0 0 64px;
   width: 740px;
   line-height: 96px;
   font-size: 102px;
@@ -131,10 +132,22 @@
   font-weight: 600;
   text-align: center;
   width: 60%;
+  margin: 0;
+  z-index:2;
+}
+
+.section-title_theme_dark {
+  position: relative;
+  color: white;
+  z-index: 2;
 }
 
 .section-title_margin_100 {
   margin: 100px auto 0 auto;
+}
+
+.section-title_margin_90 {
+  margin: 90px auto 0 auto;
 }
 
 .section-subtitle {
@@ -143,6 +156,13 @@
   font-weight: normal;
   text-align: center;
   width: 60%;
+  margin: 0;
+}
+
+.section-subtitle_theme_dark {
+  position: relative;
+  color: white;
+  z-index: 2;
 }
 
 .section-subtitle_margin_20 {
@@ -150,44 +170,195 @@
 }
 
 .table {
+  list-style: none;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-}
-
-.table_theme_white {
-  margin: 0 auto 100px auto;
   width: 1100px;
+  margin: 0;
+  padding: 0;
 }
 
-.table__cell_theme_white {
-  margin-top: 60px;
+.table_margin_100{
+  margin: 0 auto 100px auto;
+}
+
+.table_theme_dark {
+  position: relative;
+  color: white;
+  z-index: 2;
+}
+
+.table_margin_90 {
+  margin: 0 auto 90px auto;
+}
+
+.table__cell {
+  margin: 60px 0 0 0;
   width: 250px;
 }
 
 .table__cell_theme_dark {
   width: 200px;
   color: white;
-  margin-right: 0;
-  margin-top: 80px;
+  margin: 80px 0 0 0;
 }
 
 .table__heading {
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
+  margin: 0;
 }
 
-.table__heading_theme_white {
-
+.table__heading_theme_dark {
 }
 
 .table__text {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  margin: 20px 0 0 0;
 }
 
-.table__text_theme_white {
-  margin-top: 20px;
+.table__text_theme_dark {
+
 }
+
+.feynman {
+  display: flex;
+  flex-direction: column;
+  min-height: 890px;
+  background-image: url("../images/feynman.png");
+  background-position: bottom left;
+  background-repeat: no-repeat;
+  background-size: 867px 637px;
+  position: relative;
+}
+
+.feynman__title {
+  text-align: center;
+  margin: 100px auto 0 auto;
+  width: 648px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+}
+
+.feynman__subtitle {
+  width: fit-content;
+  margin: 70px auto 0 auto;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+
+.kaufman {
+  overflow: hidden;
+  background-color: #1f1f1f;
+  position: relative;
+}
+
+.triangle {
+  min-width: 877px;
+  min-height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  background-image: url("../images/kaufman-triangle.svg");
+  background-repeat: no-repeat;
+  background-size: 877px 877px;
+  background-position: center;
+  z-index: 1;
+}
+
+.footer {
+  background-color: #1f1f1f;
+  min-height: 350px;
+  display: flex;
+  color: white;
+}
+
+.footer__columns {
+  margin: 60px auto 40px auto;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__column {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+  justify-content: space-between;
+}
+
+.footer__author {
+  margin: 18px 0;
+  width: fit-content;
+  line-height: 25px;
+  font-size: 18px;
+}
+
+.footer__column_content_info {
+}
+
+.footer__column_content_social {
+}
+
+.footer__column-links {
+  list-style: none;
+  padding: 0;
+  margin: 20px 0 0 0;
+}
+
+.footer__column-link {
+  text-decoration: none;
+  color:white;
+  margin: 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__column-heading {
+  margin: 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.logo_place_footer {
+  background-image: url("../images/logo_place_footer.svg");
+  width: 228px;
+  height: 32px;
+}
+
+.footer__social-icon {
+  margin: 0 10px 0 0;
+}
+
+
+
+
+
+
+
+
+
+
+
