--- a/styles/style.css
+++ b/styles/style.css
@@ -319,6 +319,8 @@
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
+  display: flex;
+  align-items: center;
 }
 
 .footer__column-heading {
