--- a/styles/style.css
+++ b/styles/style.css
@@ -86,7 +86,7 @@
 .two-columns {
   display: flex;
   justify-content: space-between;
-  margin: 100px auto 0 100px;
+  margin: 100px auto 100px auto;
   width: 80%;
 }
 
@@ -120,6 +120,7 @@
 }
 
 .digits {
+  padding: 100px 0;
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -131,7 +132,7 @@
   font-weight: 600;
   text-align: center;
   width: 60%;
-  margin: 0;
+  margin: 0 auto;
   z-index:2;
 }
 
@@ -141,21 +142,13 @@
   z-index: 2;
 }
 
-.section-title_margin_100 {
-  margin: 100px auto 0 auto;
-}
-
-.section-title_margin_90 {
-  margin: 90px auto 0 auto;
-}
-
 .section-subtitle {
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
   text-align: center;
   max-width: 60%;
-  margin: 0;
+  margin: 20px auto 0 auto;
 }
 
 .section-subtitle_theme_dark {
@@ -164,32 +157,20 @@
   z-index: 2;
 }
 
-.section-subtitle_margin_20 {
-  margin:20px auto 0 auto;
-}
-
 .table {
   list-style: none;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   width: 1100px;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
-}
-
-.table_margin_100{
-  margin: 0 auto 100px auto;
 }
 
 .table_theme_dark {
   position: relative;
   color: white;
   z-index: 2;
-}
-
-.table_margin_90 {
-  margin: 0 auto 90px auto;
 }
 
 .table__cell {
@@ -259,6 +240,7 @@
   overflow: hidden;
   background-color: #1f1f1f;
   position: relative;
+  padding: 90px 0;
 }
 
 .kaufman__triangle {
