--- a/styles/style.css
+++ b/styles/style.css
@@ -86,7 +86,7 @@
 .two-columns {
   display: flex;
   justify-content: space-between;
-  margin: 100px auto 100px auto;
+  margin: 100px auto 0 auto;
   width: 80%;
 }
 
