--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,7 +1,6 @@
 .khan__book-pic {
-  font-weight: normal;
+  object-fit: cover;
+  object-position: top;
   width: 620px;
   height: 608px;
-  background-image: url("../../../images/khan-book.jpg");
-  background-repeat: no-repeat;
 }
